cabal-version:      2.4
name:               cardano-wallet
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sławomir Śledź
maintainer:         slawomir.sledz@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Cardano.Node.Cli
      , Cardano.Transaction
      , Cardano.Data.Value
      , Cardano.Data
      , HttpEndpoints
      , Wallet.Api

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.7 && <5
      , containers >= 0.5.7 && < 0.6  
      , aeson
      , bytestring
      , mtl
      , text
      , uuid
      , servant
      , servant-server
      , transformers
      , wai
      , directory
      , http-api-data
      , http-media
      , http-types
      , string-conversions
      , process
      , safe
      , temporary
      , random >= 1.1 && < 1.3
    hs-source-dirs:   src
    default-language: Haskell2010

executable cardano-wallet
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.7 && <5
      , wai
      , warp
      , cardano-wallet

    hs-source-dirs:   app
    default-language: Haskell2010
